fix(sales): handle null values in sales processing